# codingchallenges

./: .gitignore  LICENSE  README.md  pyproject.toml
adventofcode2015/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py
adventofcode2016/: 01.py  02.py  03.py  04.py  04b.py  05.py  05b.py  06.py  06b.py  07.py  07b.py  08.py  09.py  09b.py  10.py  11.py  11b.py  11c.py  12.py  13.py  14.py  15.py  16.py  16alt.py  17.py  18.py  18b.py  19.py  19b.py  19c.py  19d.py  19e.py  19f.py  20.py  21.py  22.py  23.py  24.py  25.py
adventofcode2017/: 01.py  02.py  03.py  03b.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  20.py  21.py  22.py  23.py  24.py  25.py
adventofcode2018/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  15.py  16.py  17.py  18.py  19.py  20.py  21.py  23.py  24.py  25.py
adventofcode2019/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py
adventofcode2020/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  17b.py  18.py  19.py  20.py  21.py  22.py  23.py  24.py  25.py
adventofcode2021/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.php  day17.py  day18.py  day19.py
adventofcode2022/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  (+4 more)
(+289 files in other folders)
