[tool.poetry]
name = "codingchallenges"
version = "0.1.0"
description = ""
authors = ["Mats Lindh <mats@lindh.no>"]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.0"
haversine = "^2.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
