[project]
name = "codingchallenges"
version = "0.1.0"
description = ""
authors = [{ name = "Mats Lindh", email = "mats@lindh.no" }]
requires-python = ">=3.11,<4"
dependencies = [
    "pytest>=8.3.4",
    "haversine>=2.5.1",
    "tqdm>=4.64.1",
    "bitstring>=4.1.4",
]

[dependency-groups]
dev = []

[tool.hatch.build.targets.sdist]
include = ["common"]

[tool.hatch.build.targets.wheel]
include = ["common"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
